--- a/Josephson effect and Supercurrents/JosephsonVorticesSNS.ipynb
+++ b/Josephson effect and Supercurrents/JosephsonVorticesSNS.ipynb
@@ -68,7 +68,7 @@
     "            if i > 0:\n",
     "                syst[lat(i , j) , lat(i-1 , j)] = -(t/a**2)*sz\n",
     "            if j > 0:\n",
-    "                phase = np.exp(1j*B*i*a*a/0.5)\n",
+    "                phase = np.exp(1j*B*i*a*a/2)\n",
     "                syst[lat(i , j) , lat(i , j-1)] = -(t/a**2)*(sz@np.diag([phase , phase.conj()]))\n",
     "\n",
     "    sym_2 = kwant.TranslationalSymmetry((0 , a))\n",
@@ -346,7 +346,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "syst = kwant.Builder()\n",
+    "lat = kwant.lattice.square(a = 1)\n",
+    "\n",
+    "l = 10\n",
+    "w = 10\n",
+    "mu = 0.5\n",
+    "\n",
+    "for i in range(l):\n",
+    "    for j in range(w):\n",
+    "\n",
+    "        syst[lat(i , j)] = 4*t - mu\n",
+    "\n",
+    "        if i > 0:\n",
+    "            syst[lat(i , j) , lat(i-1 , j)] = -t\n",
+    "\n",
+    "        if j > 0:\n",
+    "            syst[lat(i , j) , lat(i , j-1)] = -t\n",
+    "        \n"
+   ]
   }
  ],
  "metadata": {
