Added subroutines to RGFtools.pu

--- a/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
+++ b/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,189 +71,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# W = 10 # Width of strip\n",
-    "# L = 10 # Length of normal region\n",
-    "# t = 1\n",
-    "# mu = 0.5 # Chemical potential\n",
-    "# Delta = 2\n",
-    "# phase = 0.2*2*np.pi\n",
-    "# flux = 0\n",
-    "# B = flux / ((L + 2)*W)\n",
-    "# T = 1\n",
-    "# # Computing all the modes in the left lead at some energy E:\n",
-    "# E = 1j*np.pi*(2*(0) + 1)*T\n",
+    "from dataclasses import dataclass\n",
+    "from RGFtools import *\n",
     "\n",
-    "\n",
-    "params = {\n",
-    "    'W' : 10 , 'L' : 10 , 't' : 1 , 'mu' : 0.5 , 'Delta' : 2 , 'phase' : 0.2*2*np.pi , 'flux' : 0 , 'T' : 1 , 'n' : 0\n",
-    "    }\n",
-    "// also look into @dataclass\n",
+    "@dataclass\n",
     "class JosephsonParameters:\n",
-    "    W: int\n",
-    "    L: int\n",
-    "    bananas: int\n",
+    "    W: float\n",
+    "    L: float\n",
+    "    t: float\n",
+    "    mu: float\n",
+    "    Delta: float\n",
+    "    phase: float\n",
+    "    flux: float\n",
+    "    T: float\n",
+    "    n: int\n",
     "\n",
-    "def h_0(j , * , W , L , t , mu , Delta , phase , flux , T , n):\n",
-    "    # This function constructs the Hamiltonian for sites along the jth slice. It does not include hoppings between neighbouring slices.\n",
-    "    # We will use the gauge A = By \\hat{x}\n",
-    "    if j < 1:\n",
-    "        onsitematrix = 4*t*sz - mu*sz + Delta*sx\n",
-    "\n",
-    "    if j >= 1 and j <=L:\n",
-    "        onsitematrix = 4*t*sz -mu*sz\n",
-    "    \n",
-    "    if j > L:\n",
-    "        onsitematrix = 4*t*sz - mu*sz + Delta*np.exp(1j*phase)*np.array([[0 , 1] ,[0 , 0]]) + Delta*np.exp(-1j*phase)*np.array([[0 , 0] ,[1 , 0]])\n",
-    "    \n",
-    "    off_diagonal_elements = np.diag( np.ones(W-1) , k = 1) + np.diag( np.ones(W-1) , k = -1)\n",
-    "    h_hops = np.kron(off_diagonal_elements , -t*sz)\n",
-    "\n",
-    "    h_onsites = np.kron(np.identity(W) , onsitematrix)\n",
-    "    h_0 = h_onsites + h_hops\n",
-    "    return h_0\n",
-    "\n",
-    "def T(j, pm , * , W , L , t , mu , Delta , phase , flux , T , n):\n",
-    "    B = flux / ((L + 2)*W)\n",
-    "    if j < 1 or j > L:\n",
-    "        return np.kron(np.identity(W) , -t*sz)\n",
-    "    if j >= 1 and j <= L:\n",
-    "        peierls_e = pm*(B/2)*np.arange(W) # array of peierl phases for electrons\n",
-    "        peierls_h = -peierls_e # array of peierl phases for holes.\n",
-    "        peierls_interweaved = np.exp(1j*np.vstack((peierls_e , peierls_h)).reshape((-1 , ) , order = 'F')) #<- talking elementwise exponential.\n",
-    "        peierls_bdg = np.diag(peierls_interweaved) # Peierls phases as the appear in the BdG matrix\n",
-    "        return np.kron(np.identity(W) , -t*sz)@peierls_bdg\n",
-    "\n",
-    "def sorting_modes(eigenvalues , eigenvectors , tol = 1e-4):\n",
-    "    '''\n",
-    "    This function sorts modes into those that evanesce in the positive-x and negative-x directions\n",
-    "    and those that propagate in the +ve and -ve x direction.\n",
-    "    Inputs:\n",
-    "    eigenvalues: array_like, vector of eigenvalues.\n",
-    "    eigenvectors: ndarray , matrix of eigenvectors where columns 'i' to eigenvalue 'i'.\n",
-    "    tol: float , optional.  Tolerance to determine if eigenvalue is unit magnitude. If not set manually, default precision is 1e-4.\n",
-    "        WARNING: If tolerance is smaller than numerical precision, the function might \"miss\" all the propagating modes.\n",
-    "    Returns:\n",
-    "    pos_evanesce , neg_evanesce: ndarray, Eigenvectors that evanesce in the positive and negative x-direction respectively.\n",
-    "    pos_prop , neg_prop: ndarray, Eigenvectors that evanesce in the positive and negative x-direction respectively.\n",
-    "    list_of_eigenvalues:list, List of arrays [pos_p_evals , neg_p_evals , pos_e_evals , neg_e_evals] with eigenvalues sorted according to their propagation type.\n",
-    "    '''\n",
-    "    # Eigenvalues corresponding to states that decay in the positive x direction:\n",
-    "    pos_e_evals = eigenvalues[(np.abs(eigenvalues) - 1) < -tol]\n",
-    "    # Eigenvalues corresponding to states that evanesce in the negative x direction:\n",
-    "    neg_e_evals = eigenvalues[(np.abs(eigenvalues) - 1) > tol]\n",
-    "    # Eigenvalues corresponding to propagating states in the +ve x direction:\n",
-    "    propagatingstates = eigenvalues[np.abs((np.abs(eigenvalues) - 1)) <= tol]\n",
-    "    pos_p_evals = propagatingstates[np.angle(propagatingstates) > 0]\n",
-    "    # Eigenvalues corresponding to propagating states in the -ve x direction:\n",
-    "    neg_p_evals = propagatingstates[np.angle(propagatingstates) < 0]\n",
-    "\n",
-    "    # Checking that the lengths of pos_e_evals , neg_e_evals , pos_p_evals , neg_p_evals sum up to len(evals)\n",
-    "    if (len(pos_e_evals) + len(pos_p_evals) + len(neg_e_evals) + len(neg_p_evals)) != len(evals):\n",
-    "        raise Exception(\"The number of evanescent and propagating states in the +ve and -ve x direction does not match the length of eigenvalues array. Change tolerance!\")\n",
-    "\n",
-    "    #Eigenvectors that evanesce in the positive x direction:\n",
-    "    pos_evanesce = eigenvectors[: , (np.abs(eigenvalues) - 1) < -tol]\n",
-    "    #Eigenvectors that evanesce in the negative x direction:\n",
-    "    neg_evanesce = eigenvectors[: , (np.abs(eigenvalues) - 1) > tol]\n",
-    "    #Eigenvectors that propagate in the positive x direction:\n",
-    "    propagatingeigenvectors = eigenvectors[: , np.abs((np.abs(eigenvalues) - 1)) < tol]\n",
-    "    pos_prop = propagatingeigenvectors[: , np.angle(propagatingstates) > 0]\n",
-    "    neg_prop = propagatingeigenvectors[: , np.angle(propagatingstates) < 0]\n",
-    "    \n",
-    "    list_of_eigenvalues= [pos_p_evals , neg_p_evals , pos_e_evals , neg_e_evals]\n",
-    "    \n",
-    "    return pos_prop , neg_prop , pos_evanesce , neg_evanesce , list_of_eigenvalues\n",
-    "\n",
-    "def calculate_transfer_matrices(slice , * , W , L , t , mu , Delta , phase , flux , T , n ):\n",
-    "    energy = 1j*np.pi*(2*(n) + 1)*T\n",
-    "    M00 = -np.linalg.inv(T(slice+1 , -1, **params))@(energy -  h_0(slice , **params)) # <- Calculating the Hamiltonian at slice.\n",
-    "    M01 = -np.linalg.inv(T(slice+1 , -1, **params))@T(slice , +1 , **params)\n",
-    "    M10 = np.identity(2*W)\n",
-    "    M11 = np.zeros(shape = (2*W , 2*W))\n",
-    "\n",
-    "    M = np.block([[M00 , M01],[M10 , M11]]) #<- Matrix to diagonalise for propagating modes in lead\n",
-    "    evals , evecs = np.linalg.eig(M)\n",
-    "    \n",
-    "    pos_prop , neg_prop , pos_evanesce , neg_evanesce , list_of_eigenvalues = sorting_modes(evals , evecs  , tol = 1e-4)\n",
-    "\n",
-    "    # First I am going to glue together all modes that evanesce/propagate in the positive x-direction:\n",
-    "    pos_modes = np.hstack((pos_prop , pos_evanesce))\n",
-    "    neg_modes = np.hstack((neg_prop , neg_evanesce))\n",
-    "\n",
-    "    # The U(\\pm)-matrices consisten of amplitudes on the j = 0 slice. So we take only the first half rows:\n",
-    "    U_pos = pos_modes[0:int(pos_modes.shape[0]/2) , :]\n",
-    "    U_neg = neg_modes[0:int(neg_modes.shape[0]/2) , :]\n",
-    "\n",
-    "    # The \\Lambda(\\pm) matrix comprises of all the corresponding eigenvalues:\n",
-    "    Lambda_pos = np.diag(np.hstack((list_of_eigenvalues[0] ,list_of_eigenvalues[2])))\n",
-    "    Lambda_neg = np.diag(np.hstack((list_of_eigenvalues[1] , list_of_eigenvalues[3])))\n",
-    "\n",
-    "    # Construct the F(\\pm) transfer matrices:\n",
-    "    F_pos = U_pos @ Lambda_pos @ np.linalg.inv(U_pos)\n",
-    "    F_neg = U_neg @ Lambda_neg @ np.linalg.inv(U_neg)\n",
-    "\n",
-    "    return F_pos , F_neg"
+    "params = JosephsonParameters(W=10, L=10, t=1, mu=0.5, Delta=2, phase=0.0*2*np.pi, flux=0, T=1, n=10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/Users/krishnanganesh/Desktop/Josephson Investigations/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m E \u001b[39m=\u001b[39m \u001b[39m1\u001b[39mj\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mpi\u001b[39m*\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m(params[\u001b[39m'\u001b[39m\u001b[39mn\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\u001b[39m*\u001b[39mparams[\u001b[39m'\u001b[39m\u001b[39mT\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m F_pos_0 , F_neg_0 \u001b[39m=\u001b[39m calculate_transfer_matrices(\u001b[39m0\u001b[39;49m , \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mparams)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m F_pos_Lplusone , F_neg_Lplusone \u001b[39m=\u001b[39m calculate_transfer_matrices(L\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m , \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Initial diagonal Green's function in the left-lead at slice 0:\u001b[39;00m\n",
-      "\u001b[1;32m/Users/krishnanganesh/Desktop/Josephson Investigations/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb Cell 7\u001b[0m in \u001b[0;36mcalculate_transfer_matrices\u001b[0;34m(slice, W, L, t, mu, Delta, phase, flux, T, n)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=89'>90</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcalculate_transfer_matrices\u001b[39m(\u001b[39mslice\u001b[39m , \u001b[39m*\u001b[39m , W , L , t , mu , Delta , phase , flux , T , n ):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=90'>91</a>\u001b[0m     energy \u001b[39m=\u001b[39m \u001b[39m1\u001b[39mj\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mpi\u001b[39m*\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39m(n) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\u001b[39m*\u001b[39mT\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=91'>92</a>\u001b[0m     M00 \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(T(\u001b[39mslice\u001b[39;49m\u001b[39m+\u001b[39;49m\u001b[39m1\u001b[39;49m , \u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mparams))\u001b[39m@\u001b[39m(energy \u001b[39m-\u001b[39m  h_0(\u001b[39mslice\u001b[39m , \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)) \u001b[39m# <- Calculating the Hamiltonian at slice.\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=92'>93</a>\u001b[0m     M01 \u001b[39m=\u001b[39m \u001b[39m-\u001b[39mnp\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(T(\u001b[39mslice\u001b[39m\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m , \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams))\u001b[39m@T\u001b[39m(\u001b[39mslice\u001b[39m , \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m , \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mparams)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#W4sZmlsZQ%3D%3D?line=93'>94</a>\u001b[0m     M10 \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39midentity(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mW)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-2.2729818027755755e-11+1.8676615809454233e-11j)\n"
      ]
     }
    ],
    "source": [
-    "E = 1j*np.pi*(2*(params['n']) + 1)*params['T']\n",
+    "E = 1j*np.pi*(2*(params.n) + 1)*params.T\n",
     "\n",
-    "F_pos_0 , F_neg_0 = calculate_transfer_matrices(0 , **params)\n",
-    "F_pos_Lplusone , F_neg_Lplusone = calculate_transfer_matrices(L+1 , **params)\n",
+    "F_pos_0 , F_neg_0 = calculate_transfer_matrices(0 , params)\n",
+    "F_pos_Lplusone , F_neg_Lplusone = calculate_transfer_matrices(params.L+1 , params)\n",
     "\n",
     "# Initial diagonal Green's function in the left-lead at slice 0:\n",
-    "H_0_tilde = h_0(slice , **params) - T(slice , -1 , **params)@np.linalg.inv(F_neg_0)\n",
+    "H_0_tilde = h_0(slice , params) - T(slice , -1 , params)@np.linalg.inv(F_neg_0)\n",
     "G_0 = np.linalg.inv(E - (H_0_tilde))\n",
     "\n",
-    "H_Lplusone_tilde = h_0(params['L']+1 , **params) - T(params['L']+2 , -1 , **params)@F_pos_Lplusone\n",
+    "H_Lplusone_tilde = h_0(params.L+1 , params) - T(params.L+2 , -1 , params)@F_pos_Lplusone\n",
     "G_Lplusone = np.linalg.inv(E - (H_Lplusone_tilde))\n",
     "\n",
     "# RECURSION:          \n",
-    "recursion_length = params['L']\n",
-    "left_recursion_gfs = np.zeros(shape = (2*params['W'] , 2*params['W'] , params['L']))\n",
+    "recursion_length = params.L\n",
+    "left_recursion_gfs = np.zeros(shape = (2*params.W , 2*params.W , params.L))\n",
     "left_recursion_gfs[: , : , 0] = G_0\n",
     "for i in range(recursion_length):\n",
     "    if i > 0:\n",
-    "        left_recursion_gfs[: , : , i] = np.linalg.inv(E - h_0(i , **params) - T(i , +1 , **params)@ left_recursion_gfs[: , : , i-1] @T(i , -1 , **params))\n",
+    "        left_recursion_gfs[: , : , i] = np.linalg.inv(E - h_0(i , params) - T(i , +1 , params)@ left_recursion_gfs[: , : , i-1] @T(i , -1 , params))\n",
     "\n",
-    "right_recursion_gfs = np.zeros(shape = (2*params['W'] , 2*params['W'] , params['L']))\n",
+    "right_recursion_gfs = np.zeros(shape = (2*params.W , 2*params.W , params.L))\n",
     "right_recursion_gfs[: , : , 0] = G_Lplusone\n",
-    "for i in range(L):\n",
+    "for i in range(params.L):\n",
     "    if i > 0:\n",
-    "        right_recursion_gfs[: , : , i] = np.linalg.inv(E - h_0(i-1 , **params) - T(i , -1 , **params)@ right_recursion_gfs[: , : , i] @T(i , +1 , **params))\n",
+    "        right_recursion_gfs[: , : , i] = np.linalg.inv(E - h_0(i-1 , params) - T(i , -1 , params)@ right_recursion_gfs[: , : , i] @T(i , +1 , params))\n",
     "\n",
     "\n",
     "# Evaluate Green function at coordinate eval_point:\n",
     "eval_point = 5\n",
     "\n",
-    "G_evalpoint = np.linalg.inv(E - h_0(eval_point , **params) - T(eval_point , +1 ,**params)@ left_recursion_gfs[: , : , eval_point-1] @ T(eval_point , -1  , **params) -\n",
-    "                            - T(eval_point + 1 , -1 , **params) @ right_recursion_gfs[: , : , eval_point + 1] @ T(eval_point + 1 , +1 , **params))\n",
+    "G_evalpoint = np.linalg.inv(E - h_0(eval_point , params) - T(eval_point , +1 , params)@ left_recursion_gfs[: , : , eval_point-1] @ T(eval_point , -1  , params) -\n",
+    "                            - T(eval_point + 1 , -1 , params) @ right_recursion_gfs[: , : , eval_point + 1] @ T(eval_point + 1 , +1 , params))\n",
     "\n",
     "# Off diagonal green's functions:\n",
-    "G_plusx = right_recursion_gfs[: , : , eval_point + 1]@T(eval_point + 1 , +1 , **params)@G_evalpoint\n",
-    "G_minusx = G_evalpoint@T(eval_point + 1 , -1 , **params)@right_recursion_gfs[: , : , eval_point + 1 ]\n",
+    "G_plusx = right_recursion_gfs[: , : , eval_point + 1]@T(eval_point + 1 , +1 , params)@G_evalpoint\n",
+    "G_minusx = G_evalpoint@T(eval_point + 1 , -1 , params)@right_recursion_gfs[: , : , eval_point + 1 ]\n",
     "\n",
     "# Contribution to current:\n",
     "I_n = np.trace(G_plusx - G_minusx)\n",
