added tolerace as a parameter

--- a/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
+++ b/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/krishnanganesh/anaconda3/lib/python3.8/site-packages/kwant/solvers/default.py:16: RuntimeWarning: MUMPS is not available, SciPy built-in solver will be used as a fallback. Performance can be very poor in this case.\n",
-      "  warnings.warn(\"MUMPS is not available, \"\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +95,7 @@
     "    Delta: float\n",
     "    phase: float\n",
     "    mu: float\n",
+    "    tol: float\n",
     "\n",
     "# params = JosephsonParameters(W = 10 , \n",
     "#                              L = 10,\n",
@@ -109,129 +110,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.01\n",
-      "0.02\n",
-      "0.03\n",
-      "0.04\n",
-      "0.05\n",
-      "0.06\n",
-      "0.07\n",
-      "0.08\n",
-      "0.09\n",
-      "0.1\n",
-      "0.11\n",
-      "0.12\n",
-      "0.13\n",
-      "0.14\n",
-      "0.15\n",
-      "0.16\n",
-      "0.17\n",
-      "0.18\n",
-      "0.19\n",
-      "0.2\n",
-      "0.21\n",
-      "0.22\n",
-      "0.23\n",
-      "0.24\n",
-      "0.25\n",
-      "0.26\n",
-      "0.27\n",
-      "0.28\n",
-      "0.29\n",
-      "0.3\n",
-      "0.31\n",
-      "0.32\n",
-      "0.33\n",
-      "0.34\n",
-      "0.35000000000000003\n",
-      "0.36\n",
-      "0.37\n",
-      "0.38\n",
-      "0.39\n",
-      "0.4\n",
-      "0.41000000000000003\n",
-      "0.42\n",
-      "0.43\n",
-      "0.44\n",
-      "0.45\n",
-      "0.46\n",
-      "0.47000000000000003\n",
-      "0.48\n",
-      "0.49\n",
-      "0.5\n",
-      "0.51\n",
-      "0.52\n",
-      "0.53\n",
-      "0.54\n",
-      "0.55\n",
-      "0.56\n",
-      "0.5700000000000001\n",
-      "0.58\n",
-      "0.59\n",
-      "0.6\n",
-      "0.61\n",
-      "0.62\n",
-      "0.63\n",
-      "0.64\n",
-      "0.65\n",
-      "0.66\n",
-      "0.67\n",
-      "0.68\n",
-      "0.6900000000000001\n",
-      "0.7000000000000001\n",
-      "0.71\n",
-      "0.72\n",
-      "0.73\n",
-      "0.74\n",
-      "0.75\n",
-      "0.76\n",
-      "0.77\n",
-      "0.78\n",
-      "0.79\n",
-      "0.8\n",
-      "0.81\n",
-      "0.8200000000000001\n",
-      "0.8300000000000001\n",
-      "0.84\n",
-      "0.85\n",
-      "0.86\n",
-      "0.87\n",
-      "0.88\n",
-      "0.89\n",
-      "0.9\n",
-      "0.91\n",
-      "0.92\n",
-      "0.93\n",
-      "0.9400000000000001\n",
-      "0.9500000000000001\n",
-      "0.96\n",
-      "0.97\n",
-      "0.98\n",
-      "0.99\n",
-      "1.0\n"
+      "1e-05j\n",
+      "(10, 2)\n",
+      "(10, 2)\n"
+     ]
+    },
+    {
+     "ename": "LinAlgError",
+     "evalue": "Last 2 dimensions of the array must be square",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLinAlgError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/krishnanganesh/Desktop/Josephson Investigations/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 55>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m params_new \u001b[39m=\u001b[39m JosephsonParameters(W \u001b[39m=\u001b[39m \u001b[39m5\u001b[39m , \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m                          L \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m                          t \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m                          mu \u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m                          tol \u001b[39m=\u001b[39m \u001b[39m1e-4\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m \u001b[39mprint\u001b[39m(params_new\u001b[39m.\u001b[39menergy)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m conductance_values[i] , transmissionmatrix\u001b[39m=\u001b[39m compute_conductance(params_new , eta \u001b[39m=\u001b[39;49m \u001b[39m0\u001b[39;49m)\n",
+      "\u001b[1;32m/Users/krishnanganesh/Desktop/Josephson Investigations/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb Cell 6\u001b[0m in \u001b[0;36mcompute_conductance\u001b[0;34m(params, eta)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=38'>39</a>\u001b[0m U_pos_Lplusone \u001b[39m=\u001b[39m debug_Lplusone[\u001b[39m'\u001b[39m\u001b[39mU_pos\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m U_neg_Lplusone \u001b[39m=\u001b[39m debug_Lplusone[\u001b[39m'\u001b[39m\u001b[39mU_neg\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m transmissionmatrix \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mlinalg\u001b[39m.\u001b[39;49minv(U_pos_Lplusone)\u001b[39m@off_diag_greensfunctions\u001b[39m[: , : , \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\u001b[39m@T\u001b[39m(\u001b[39m0\u001b[39m , \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m , params)\u001b[39m@\u001b[39m(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(F_pos_0) \u001b[39m-\u001b[39m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m                                                                                                    np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(F_neg_0))\u001b[39m@U_pos_0\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=43'>44</a>\u001b[0m reflectionmatrix \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(U_neg_0)\u001b[39m@\u001b[39m(diag_greensfunctions[: , : , \u001b[39m0\u001b[39m]\u001b[39m@T\u001b[39m(\u001b[39m0\u001b[39m , \u001b[39m+\u001b[39m\u001b[39m1\u001b[39m , params)\u001b[39m@\u001b[39m(np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(F_pos_0) \u001b[39m-\u001b[39m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=44'>45</a>\u001b[0m                                                                                                    np\u001b[39m.\u001b[39mlinalg\u001b[39m.\u001b[39minv(F_neg_0)) \u001b[39m-\u001b[39m np\u001b[39m.\u001b[39midentity(U_neg_Lplusone\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]))\u001b[39m@U_pos_0\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/DC_SNS_numerics.ipynb#X36sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m conductance \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n",
+      "File \u001b[0;32m<__array_function__ internals>:5\u001b[0m, in \u001b[0;36minv\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/numpy/linalg/linalg.py:540\u001b[0m, in \u001b[0;36minv\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    538\u001b[0m a, wrap \u001b[39m=\u001b[39m _makearray(a)\n\u001b[1;32m    539\u001b[0m _assert_stacked_2d(a)\n\u001b[0;32m--> 540\u001b[0m _assert_stacked_square(a)\n\u001b[1;32m    541\u001b[0m t, result_t \u001b[39m=\u001b[39m _commonType(a)\n\u001b[1;32m    543\u001b[0m signature \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mD->D\u001b[39m\u001b[39m'\u001b[39m \u001b[39mif\u001b[39;00m isComplexType(t) \u001b[39melse\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39md->d\u001b[39m\u001b[39m'\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.8/site-packages/numpy/linalg/linalg.py:203\u001b[0m, in \u001b[0;36m_assert_stacked_square\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    201\u001b[0m m, n \u001b[39m=\u001b[39m a\u001b[39m.\u001b[39mshape[\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m:]\n\u001b[1;32m    202\u001b[0m \u001b[39mif\u001b[39;00m m \u001b[39m!=\u001b[39m n:\n\u001b[0;32m--> 203\u001b[0m     \u001b[39mraise\u001b[39;00m LinAlgError(\u001b[39m'\u001b[39m\u001b[39mLast 2 dimensions of the array must be square\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mLinAlgError\u001b[0m: Last 2 dimensions of the array must be square"
      ]
     }
    ],
    "source": [
     "def compute_conductance(params , eta = 1e-5):\n",
-    "    E = params.energy + 1j*eta\n",
     "    F_pos_0 , F_neg_0 , debug0 = calculate_transfer_matrices(0 , params)\n",
     "    F_pos_Lplusone , F_neg_Lplusone , debug_Lplusone = calculate_transfer_matrices(params.L+1 , params)\n",
     "\n",
     "    # Initial diagonal Green's function in the left-lead at slice 0:\n",
     "    H_0_tilde = h_0(0 , params) + T(0 , +1 , params)@np.linalg.inv(F_neg_0)\n",
-    "    G_0 = np.linalg.inv(E*np.identity(2*params.W) - (H_0_tilde))\n",
+    "    G_0 = np.linalg.inv(params.energy*np.identity(2*params.W) - (H_0_tilde))\n",
     "\n",
     "    H_Lplusone_tilde = h_0(params.L+1 , params) + T(params.L+2 , -1 , params)@F_pos_Lplusone\n",
-    "    G_Lplusone = np.linalg.inv(E*np.identity(2*params.W) - (H_Lplusone_tilde))\n",
+    "    G_Lplusone = np.linalg.inv(params.energy*np.identity(2*params.W) - (H_Lplusone_tilde))\n",
     "\n",
     "    # Recursion:\n",
     "\n",
@@ -252,7 +169,7 @@
     "\n",
     "    for i in range(no_steps):\n",
     "        if i > 0:\n",
-    "            diag_greensfunctions[: , : , i] = np.linalg.inv(E*np.identity(2*params.W)  - H_tildes[: , : , i] -\n",
+    "            diag_greensfunctions[: , : , i] = np.linalg.inv(params.energy*np.identity(2*params.W)  - H_tildes[: , : , i] -\n",
     "                                                        T(i , +1 , params) @ diag_greensfunctions[: , : , i-1] @ T(i , -1 , params))\n",
     "            off_diag_greensfunctions[: , : , i] = diag_greensfunctions[: , : , i]@ T(i , +1 , params) @ off_diag_greensfunctions[: , : , i-1]\n",
     "\n",
@@ -281,10 +198,11 @@
     "                             L = 10,\n",
     "                             t = 1,\n",
     "                             flux = 0,\n",
-    "                             energy = energy_values[i],\n",
+    "                             energy = energy_values[i] + 1j*1e-5,\n",
     "                             Delta = 0,\n",
     "                             phase = 0,\n",
-    "                             mu = 0.5)\n",
+    "                             mu = 0.5,\n",
+    "                             tol = 1e-4)\n",
     "    print(params_new.energy)\n",
     "    conductance_values[i] , transmissionmatrix= compute_conductance(params_new , eta = 0)"
    ]
