Ran some tests on the absolute value of the determinant of the Greens functions- looks impressively small!!

--- a/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
+++ b/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
     "    # Initial condition:\n",
     "    diag_greensfunctions[: , : , 0] = G_0\n",
     "    off_diag_greensfunctions[: , : , 0] = G_0\n",
-    "\n",
+    "    print(np.abs(np.linalg.det(G_0)))\n",
     "    # Storing tilde Hamiltonians in a list:\n",
     "    H_tildes = np.zeros(shape = ( H_0_tilde.shape[0] , H_0_tilde.shape[0] , no_steps))\n",
     "    H_tildes[: , : , 0] = H_0_tilde\n",
@@ -147,7 +147,6 @@
     "            diag_greensfunctions[: , : , i] = np.linalg.inv(params.energy*np.identity(2*params.W)  - H_tildes[: , : , i] -\n",
     "                                                        T(i , +1 , params) @ diag_greensfunctions[: , : , i-1] @ T(i , -1 , params))\n",
     "            off_diag_greensfunctions[: , : , i] = diag_greensfunctions[: , : , i]@ T(i , +1 , params) @ off_diag_greensfunctions[: , : , i-1]\n",
-    "\n",
     "\n",
     "    # ## Transmission matrix:\n",
     "    # U_pos_0 = debug0['U_pos']\n",
@@ -188,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +195,8 @@
      "output_type": "stream",
      "text": [
       "(20, 4)\n",
-      "(20, 4)\n"
+      "(20, 4)\n",
+      "8.650974509339729e-271\n"
      ]
     },
     {
@@ -205,7 +205,7 @@
        "(20, 20)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
