--- a/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
+++ b/Josephson effect and Supercurrents/DC_SNS_numerics.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,6 +120,7 @@
     "\n",
     "    # Initial diagonal Green's function in the left-lead at slice 0:\n",
     "    H_0_tilde = h_0(0 , params) + T(0 , +1 , params)@np.linalg.inv(F_neg_0)\n",
+    "\n",
     "    G_0 = np.linalg.inv(params.energy*np.identity(2*params.W) - (H_0_tilde))\n",
     "\n",
     "    H_Lplusone_tilde = h_0(params.L+1 , params) + T(params.L+2 , -1 , params)@F_pos_Lplusone\n",
@@ -133,7 +134,7 @@
     "    # Initial condition:\n",
     "    diag_greensfunctions[: , : , 0] = G_0\n",
     "    off_diag_greensfunctions[: , : , 0] = G_0\n",
-    "    print(np.abs(np.linalg.det(G_0)))\n",
+    "\n",
     "    # Storing tilde Hamiltonians in a list:\n",
     "    H_tildes = np.zeros(shape = ( H_0_tilde.shape[0] , H_0_tilde.shape[0] , no_steps))\n",
     "    H_tildes[: , : , 0] = H_0_tilde\n",
@@ -147,6 +148,10 @@
     "            diag_greensfunctions[: , : , i] = np.linalg.inv(params.energy*np.identity(2*params.W)  - H_tildes[: , : , i] -\n",
     "                                                        T(i , +1 , params) @ diag_greensfunctions[: , : , i-1] @ T(i , -1 , params))\n",
     "            off_diag_greensfunctions[: , : , i] = diag_greensfunctions[: , : , i]@ T(i , +1 , params) @ off_diag_greensfunctions[: , : , i-1]\n",
+    "\n",
+    "    lambda_neg = debug0['Lambda_neg']\n",
+    "    print(np.abs(np.linalg.det(lambda_neg)))\n",
+    "\n",
     "\n",
     "    # ## Transmission matrix:\n",
     "    # U_pos_0 = debug0['U_pos']\n",
@@ -178,16 +183,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Simpler tests involving computing the outgoing mode for different incoming eigenvectors:\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +193,7 @@
      "text": [
       "(20, 4)\n",
       "(20, 4)\n",
-      "8.650974509339729e-271\n"
+      "1.0000026002178113\n"
      ]
     },
     {
@@ -205,7 +202,7 @@
        "(20, 20)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
