Added '.py' to filename

--- a/Josephson effect and Supercurrents/diagnostics.ipynb
+++ b/Josephson effect and Supercurrents/diagnostics.ipynb
@@ -44,12 +44,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'RGF_single_orbital'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/krishnanganesh/Desktop/Josephson Investigations/Josephson effect and Supercurrents/diagnostics.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/diagnostics.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdataclasses\u001b[39;00m \u001b[39mimport\u001b[39;00m dataclass\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/diagnostics.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mRGF_single_orbital\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/diagnostics.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m@dataclass\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/diagnostics.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mJosephsonParameters\u001b[39;00m:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/krishnanganesh/Desktop/Josephson%20Investigations/Josephson%20effect%20and%20Supercurrents/diagnostics.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     W : \u001b[39mint\u001b[39m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'RGF_single_orbital'"
+     ]
+    }
+   ],
    "source": [
     "from dataclasses import dataclass\n",
-    "from RGFtools import T , sorting_modes , h_0\n",
+    "from RGF_single_orbital import *\n",
     "@dataclass\n",
     "class JosephsonParameters:\n",
     "    W : int\n",
@@ -62,51 +74,6 @@
     "    mu: float\n",
     "    tol: float\n",
     "from scipy.linalg import orth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_transfer_matrices(slice , params ):\n",
-    "    energy = params.energy\n",
-    "    M00 = np.linalg.inv(T(slice+1 , -1, params))@(energy*np.identity(2*params.W)-  h_0(slice , params)) # <- Calculating the Hamiltonian at slice.\n",
-    "    M01 = -np.linalg.inv(T(slice+1 , -1, params))@T(slice , +1 , params)\n",
-    "    M10 = np.identity(2*params.W)\n",
-    "    M11 = np.zeros(shape = (2*params.W , 2*params.W))\n",
-    "\n",
-    "    M = np.block([[M00 , M01],[M10 , M11]]) #<- Matrix to diagonalise for propagating modes in lead\n",
-    "    evals , evecs = np.linalg.eig(M)\n",
-    "    \n",
-    "    # Matrix M is not symmetric, so vectors are not necessarily orthonormal.\n",
-    "    # Let us orthogonalise them:\n",
-    "    evecs_orth = orth(evecs)\n",
-    "\n",
-    "    pos_prop , neg_prop , pos_evanesce , neg_evanesce , list_of_eigenvalues = sorting_modes(evals , evecs_orth  , tol = 1e-4)\n",
-    "    # First I am going to glue together all modes that evanesce/propagate in the positive x-direction:\n",
-    "    pos_modes = np.hstack((pos_prop , pos_evanesce))\n",
-    "    neg_modes = np.hstack((neg_prop , neg_evanesce))\n",
-    "\n",
-    "    # The U(\\pm)-matrices consisten of amplitudes on the j = 0 slice. So we take only the first half rows:\n",
-    "    U_pos = pos_modes[0:int(pos_modes.shape[0]/2) , :]\n",
-    "    U_neg = neg_modes[0:int(neg_modes.shape[0]/2) , :]\n",
-    "\n",
-    "    # The \\Lambda(\\pm) matrix comprises of all the corresponding eigenvalues:\n",
-    "    Lambda_pos = np.diag(np.hstack((list_of_eigenvalues[0] ,list_of_eigenvalues[2])))\n",
-    "    Lambda_neg = np.diag(np.hstack((list_of_eigenvalues[1] , list_of_eigenvalues[3])))\n",
-    "\n",
-    "    # Construct the F(\\pm) transfer matrices:\n",
-    "    F_pos = U_pos @ Lambda_pos @ np.linalg.inv(U_pos)\n",
-    "    F_neg = U_neg @ Lambda_neg @ np.linalg.inv(U_neg)\n",
-    "\n",
-    "    # This is for diagnostic purposes:\n",
-    "    debugdict = {'U_pos' : U_pos , 'U_neg' : U_neg , 'Lambda_pos' : Lambda_pos , 'Lambda_neg': Lambda_neg\n",
-    "                 , 'pos_prop' : pos_prop , 'neg_prop' : neg_prop , 'pos_evanesce' : pos_evanesce , 'neg_evanesce' : neg_evanesce\n",
-    "                 ,'list_of_eigenvalues' : list_of_eigenvalues , 'evals': evals , 'evecs': evecs}\n",
-    "    \n",
-    "    return F_pos , F_neg , debugdict "
    ]
   },
   {
