Added a pickling cell in the paper reproducing notebook and a pkl file for a test simulation with no-tip.

--- a/Josephson effect and Supercurrents/Reproducing Paper/PRB_Scanning_Gate.ipynb
+++ b/Josephson effect and Supercurrents/Reproducing Paper/PRB_Scanning_Gate.ipynb
@@ -537,12 +537,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "dict()"
+    "import os \n",
+    "from datetime import datetime\n",
+    "date_time = datetime.today().strftime('%Y_%m_%d_%H_%M')\n",
+    "currentworkingdirectory = os.getcwd() + '/notip_' + date_time + '.pkl'\n",
+    "pickle_dict = {'params' : params , 'I_c_values' : I_c_values , 'CPRS': CPRS}\n",
+    "with open( currentworkingdirectory,  'wb') as f:\n",
+    "    pickle.dump(pickle_dict , f)"
    ]
   },
   {
